--- a/index.ipynb
+++ b/index.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names = list(map(lambda restaurant: restaurant['name'],yelp_re ))\n",
+    "names = list(map(lambda restaurant: restaurant['name'],yelp_restaurants))\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
