Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -165,11 +165,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[610, 11, 1373, 680, 54, 647, 25, 20]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "review_counts = list(map(lambda restaurant: restaurant['review_count'], yelp_re))\n",
+    "review_counts = list(map(lambda restaurant: restaurant['review_count'], yelp_restaurants))\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
    ]
   },
@@ -186,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_reviews = None\n",
+    "total_reviews = list(map)\n",
     "total_reviews # 3420"
    ]
   },
