--- a/index.ipynb
+++ b/index.ipynb
@@ -267,7 +267,7 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    return list(map(mar))"
+    "    return list(map(lambda format_restaurant))"
    ]
   },
   {
