--- a/index.ipynb
+++ b/index.ipynb
@@ -361,7 +361,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return filter(lambda r)"
+    "    return filter(lambda restaurants: )"
    ]
   },
   {
