Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -361,7 +361,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return filter(map(lambda restaurant: not is_closed(restaurant),))"
+    "    return filter(map(lambda restaurant: not is_closed(restaurant),restaurants))"
    ]
   },
   {
