--- a/index.ipynb
+++ b/index.ipynb
@@ -356,9 +356,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-15-55546f8b9598>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-55546f8b9598>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return filter(list(map(lambda restaurant: not is_closed(restaurant),restaurants))\u001b[0m\n\u001b[0m                                                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    return filter(list(map(lambda restaurant: not is_closed(restaurant),restaurants))"
