Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -370,7 +370,7 @@
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return filter(list(map(lambda restaurant: not is_closed(restaurant),restaurants))"
+    "    return filter(not is_closed())"
    ]
   },
   {
