--- a/index.ipynb
+++ b/index.ipynb
@@ -361,7 +361,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return filter(not is_closed(), restaurants)"
+    "    return filter(, restaurants)"
    ]
   },
   {
