--- a/index.ipynb
+++ b/index.ipynb
@@ -356,18 +356,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-20-e6155718dbc5>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-e6155718dbc5>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return list(filter(lambda restaurant: restaurant['is_closed'], restaurants)\u001b[0m\n\u001b[0m                                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    return list(filter(lambda restaurant: restaurant['is_closed'], restaurants))"
@@ -375,16 +366,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<filter at 0x7f910026da58>"
+       "[{'name': 'Cocina Azul', 'price': 2, 'is_closed': True, 'review_count': 647},\n",
+       " {'name': 'Stripes Biscuit',\n",
+       "  'price': 2,\n",
+       "  'is_closed': True,\n",
+       "  'review_count': 20}]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
