--- a/index.ipynb
+++ b/index.ipynb
@@ -436,7 +436,7 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant[price]<,restaurants))"
+    "    return list(filter(lambda restaurant: len(restaurant['price'])<,restaurants))"
    ]
   },
   {
